Agregue un forms para logout

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -46,4 +46,12 @@
             <button type="submit">Cambiar Imagen</button>
         </form>
     </div>
+
+</div>
+
+<div>
+    <form id="logoutForm" action="/logout" method="POST">
+    <!-- Agrega un botón dentro del formulario para el "log out" -->
+    <button type="submit">Log Out</button>
+    </form>
 </div>
