--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -49,7 +49,9 @@
 
 </div>
 
-<div>
+<h1>LogOut</h1>
+
+<div class="logout">
     <form id="logoutForm" action="/logout" method="POST">
     <!-- Agrega un botón dentro del formulario para el "log out" -->
     <button type="submit">Log Out</button>
