--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -69,8 +69,7 @@
                     <input type="text" id="inputNewProject" name="projectName" placeholder="Project Name..."
                         style="border: none;">
                         <input type="file" id="Foto" name="Foto" style="border: none; " accept="image/**">
-                    <button type="submit" id="createPButton"
-                        style="display: flex; cursor: pointer; width: 100%; align-items: center; justify-content: center; background-color:#fef27a; border: none; border-radius: 5px; color: black;">
+                    <button type="submit" id="createPButton">
                         <i class="fa-solid fa-plus" style="margin-right: 5px;"></i>
                         Create Project...
                     </button>
