--- a/src/views/singleProject.handlebars
+++ b/src/views/singleProject.handlebars
@@ -7,7 +7,7 @@
     </div>
     <div class="dataContainer" style="display:flex;">
         <div class="imgContainer">
-            <img src="https://m.media-amazon.com/images/I/61hw9WloObL._UF1000,1000_QL80_.jpg" alt="">
+            <img src="{{projectImage}}" alt="">
         </div>
         <div class="infoDataContainer">
             <h1>{{projectName}}</h1>
