--- a/src/public/css/singleProject.css
+++ b/src/public/css/singleProject.css
@@ -36,7 +36,7 @@
 .infoDataContainer h1 {
     color: white;
     font-weight: bold;
-    font-size: 80px;
+    font-size: 70px;
 }
 
 .infoDataContainer p {
@@ -546,4 +546,63 @@
     border-radius: 32px;
     width: 55px;
     height: auto;
+}
+
+.noProjects {
+    width: 98%;
+    height: 380px;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 30px;
+    gap: 13px;
+    position: relative;
+    overflow: hidden;
+    border: 0px;
+    border-radius: 15px;
+}
+
+
+.cookieHeading {
+    font-size: 24px;
+    font-weight: 800;
+    color: white;
+}
+
+.cookieDescription {
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+}
+
+.acceptButton {
+    width: 100px;
+    height: 38px;
+    background-color: #fef27a;
+    transition-duration: .2s;
+    border: none;
+    color: black;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+
+.declineButton:hover {
+    background-color: #ebebeb;
+    transition-duration: .2s;
+}
+
+.acceptButton:hover {
+    transition-duration: .2s;
 }
