--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -73,7 +73,7 @@
                 <div class="modalNewProject">
                     <input type="text" id="inputNewProject" name="projectName" placeholder="Project Name..."
                         style="border: none;">
-                    <input type="file" id="Foto" name="Foto" style="border: none; " accept="image/**">
+                    <input type="file" id="Foto" name="Foto" style="border: none; " accept="image/*">
                     <button type="submit" id="createPButton">
                         <i class="fa-solid fa-plus" style="margin-right: 5px;"></i>
                         Create Project...
